--- a/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
+++ b/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Treehouse.FitnessFrog.Models.Entry
-
+@using Treehouse.FitnessFrog.Models
 @{
     ViewBag.Title = "Add Entry";
 }
@@ -13,28 +13,41 @@
         <div class="col-md-6">
 
             <div class="form-group">
-                @Html.LabelFor(m => m.Date, new { @class = "control-label" });
+                @Html.LabelFor(m => m.Date, new { @class = "control-label" })
                 @Html.TextBoxFor(m => m.Date, "{0:d}", new { @class = "form-control" })
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(m => m.ActivityId, new { @class = "control-label" });
+                @Html.LabelFor(m => m.ActivityId, new { @class = "control-label" })
                 @Html.DropDownListFor(m => m.ActivityId,
                             (SelectList)ViewBag.ActivitiesSelectListItems, "", new { @class = "form-control" })
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(m => m.Duration, new { @class = "control-label" });
+                @Html.LabelFor(m => m.Duration, new { @class = "control-label" })
                 @Html.TextBoxFor(m => m.Duration, new { @class = "form-control" })
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(m => m.Intensity, new { @class = "control-label" });
-                @Html.TextBoxFor(m => m.Intensity, new { @class = "form-control" })
+                @Html.LabelFor(m => m.Intensity, new { @class = "control-label" })
+                <div>
+                    <label class="radio-inline">
+                        @Html.RadioButtonFor(m => m.Intensity,
+                                Entry.IntensityLevel.Low) @Entry.IntensityLevel.Low
+                    </label>
+                    <label class="radio-inline">
+                        @Html.RadioButtonFor(m => m.Intensity,
+                                Entry.IntensityLevel.Medium) @Entry.IntensityLevel.Medium
+                    </label>
+                    <label class="radio-inline">
+                        @Html.RadioButtonFor(m => m.Intensity,
+                                Entry.IntensityLevel.High) @Entry.IntensityLevel.High
+                    </label>
+                </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(m => m.Exclude, new { @class = "control-label" });
+                @Html.LabelFor(m => m.Exclude, new { @class = "control-label" })
                 @Html.TextBoxFor(m => m.Exclude, new { @class = "form-control" })
             </div>
 
@@ -43,7 +56,7 @@
         <div class="col-md-6">
 
             <div class="form-group">
-                @Html.LabelFor(m => m.Notes, new { @class = "control-label" });
+                @Html.LabelFor(m => m.Notes, new { @class = "control-label" })
                 @Html.TextAreaFor(m => m.Notes, 14, 20, new { @class = "form-control" })
             </div>
 
